# products-importer

./: .gitignore  AGENTS.md  README.md  generate_import.py  pyproject.toml  requirements.txt  run_ui.py  web_app.py
.github/workflows/: tests.yml
docs/: local-ui-mvp-plan.md  modniy-shopping-prom-xlsx-plan.md
fixtures/: modniy_2999460479.html  modniy_3028043687.html  modniy_3058795661.html  modniy_3064637917.html  modniy_3064639273.html
src/: app_service.py  main.py
src/models/: product.py
src/normalizer/: price.py  sku.py  text.py  title.py
src/parser/: modniy_shopping.py
src/validation/: validator.py
src/xlsx/: row_builder.py  writer.py
static/: style.css
templates/: export-template.xlsx  index.html
tests/: test_app_service.py  test_cli.py  test_parser.py  test_price_normalizer.py  test_run_ui.py  test_sku_normalizer.py  test_text_normalizer.py  test_title_normalizer.py  test_validation.py  test_web_app.py  test_xlsx_contract.py
